<resources>
    <string name="app_name">Bus</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="departure_text">Отправление</string>
    <string name="arrival_text">Прибытие</string>
    <string name="delete_button_text">Удалить рейс</string>
    <string name="add_button_text">Добавить рейс</string>
    <string name="test_company_text">Test Company</string>
    <string name="name_text">Aty Zhoni</string>
    <string name="today_text">Сегодня</string>
    <string name="free_seats_text">Свободные места</string>
    <string name="passenger_name_text">Имя</string>
    <string name="passenger_seat_text">Место</string>
    <string name="passenger_type_text">Тип</string>
    <string name="change_ticket_text">Изменить</string>
    <string name="send_bill_text">Отправить чек</string>
    <string name="cancel_ticket_text">Отменить покупку билета</string>
    <string name="ticket_price_textview">Цена</string>
    <string name="ticket_seat_textview">Место</string>
    <string name="info_passenger_text">Информация о пассажире</string>
</resources>
